--- a/verval2.html
+++ b/verval2.html
@@ -7,6 +7,44 @@
     <a href="index.html" class="home-icon"><i class="fas fa-home"></i></a>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Activiteitsberekening</title>
+        <style>
+        body {
+            font-family: 'Roboto Condensed', sans-serif;
+            padding: 50px;
+            margin: 0;
+        }
+
+        .container {
+            max-width: 500px;
+            margin: 0 auto; /* Centrerend */
+            text-align: center; /* Centreer tekst */
+        }
+
+        label, input {
+            display: block;
+            margin-bottom: 10px;
+            width: 100%; /* Zorgt dat invoervelden de hele breedte nemen binnen de container */
+        }
+
+        input {
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        .result {
+            margin-top: 20px;
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 35px;
+            font-weight: bold;
+            color: #F5DF4D;
+        }
+
+        @media (max-width: 768px) {
+            .link-list {
+                flex-direction: column;
+            }
+        }
+    </style>
     <script>
         // Functie om de datum te converteren naar DD-MM-YYYY formaat
         function formatDate(date) {
