--- a/timer.html
+++ b/timer.html
@@ -9,7 +9,7 @@
     <title>Gamma Timers</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto Condensed', sans-serif;
             margin: 0;
             padding: 0;
         }
