--- a/opnamesklasseb.html
+++ b/opnamesklasseb.html
@@ -9,7 +9,7 @@
     <title>Aantal opnames klasse A en B</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto Condensed', sans-serif;
         }
 
         /* Flexbox styling for the form */
