--- a/afzettinggamma.html
+++ b/afzettinggamma.html
@@ -8,6 +8,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Afzetting Berekening</title>
+    <style>
+        body {
+            font-family: 'Roboto Condensed', sans-serif;
+            padding: 50px;
+            margin: 0;
+        }
+
+        .container {
+            max-width: 500px;
+            margin: 0 auto; /* Centrerend */
+            text-align: center; /* Centreer tekst */
+        }
+
+        label, input {
+            display: block;
+            margin-bottom: 10px;
+            width: 100%; /* Zorgt dat invoervelden de hele breedte nemen binnen de container */
+        }
+
+        input {
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        .result {
+            margin-top: 20px;
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 35px;
+            font-weight: bold;
+            color: #F5DF4D;
+        }
+
+        @media (max-width: 768px) {
+            .link-list {
+                flex-direction: column;
+            }
+        }
+    </style>
     <script>
         function berekenAfzettingIr192(Ci, wanddikte_pb, wanddikte_fe, gewenste_dosis) {
             const afzetting = Math.sqrt((Ci * 37000 * 0.13 * Math.pow(0.5, (wanddikte_pb / 3)) * Math.pow(0.5, (wanddikte_fe / 13))) / gewenste_dosis);
