--- a/MinFFD.html
+++ b/MinFFD.html
@@ -8,6 +8,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Film Focus Afstand Berekening</title>
+    <style>
+        body {
+            font-family: 'Roboto Condensed', sans-serif;
+            padding: 50px;
+            margin: 0;
+        }
+
+        .container {
+            max-width: 500px;
+            margin: 0 auto; /* Centrerend */
+            text-align: center; /* Centreer tekst */
+        }
+
+        label, input {
+            display: block;
+            margin-bottom: 10px;
+            width: 100%; /* Zorgt dat invoervelden de hele breedte nemen binnen de container */
+        }
+
+        input {
+            padding: 10px;
+            font-size: 16px;
+        }
+
+        .result {
+            margin-top: 20px;
+            font-family: 'Roboto Condensed',sans-serif;
+            font-size: 35px;
+            font-weight: bold;
+            color: #F5DF4D;
+        }
+
+        @media (max-width: 768px) {
+            .link-list {
+                flex-direction: column;
+            }
+        }
+    </style>
 </head>
 <body>
     <h1 style="color: #F5DF4D; text-align: center;">Bepaal de Minimale FFD</h1>
