--- a/focusverandering.html
+++ b/focusverandering.html
@@ -7,6 +7,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Focusverandering en Filmtype verandering</title>
+    <style>
+        body {
+            font-family: 'Roboto Condensed', sans-serif;
+            padding: 50px;
+            margin: 0;
+        }
+
+        
+    </style>
     <script>
         // Functie om minuten en seconden naar totale seconden om te zetten
         function tijdNaarSeconden(minuten, seconden) {
