--- a/handigelinks.html
+++ b/handigelinks.html
@@ -98,6 +98,7 @@
         <li><a href="https://applusglobal.sharepoint.com/sites/energyandindustry-neur/ctc/Technical%20procedures/Forms/AllItems.aspx"><i class="fa-solid fa-book"></i> Procedures</a></li>
         <li><a href="https://dosimetrie.nl/Account/LogOn"><i class="fa-solid fa-user-shield"></i> Mirion Dosisoverzicht</a></li>
         <li><a href="https://www.appsheet.com/start/5c339456-e64f-48e7-9a36-db13c95dd8a0#appName=AppTime-1320760&group=%5B%7B%22Column%22%3A%22Date%22%2C%22Order%22%3A%22Ascending%22%7D%5D&page=fastTable&sort=%5B%7B%22Column%22%3A%22Date%22%2C%22Order%22%3A%22Ascending%22%7D%2C%7B%22Column%22%3A%22Time_from%22%2C%22Order%22%3A%22Ascending%22%7D%5D&table=meTime_Open&view=Open+TS"><i class="fa-solid fa-clock"></i> Apptime</a></li>
+        <li><a href="https://applusglobal-my.sharepoint.com/:x:/r/personal/l_korwinpiotrowski_applusglobal_com/_layouts/15/Doc.aspx?sourcedoc=%7B560DF1FE-6D68-45B4-B2D1-155FA47B7217%7D&file=Planning%202025%20rev.2.xlsx&fromShare=true&action=default&mobileredirect=true"><i class="fa-regular fa-calendar-days"></i> Planning </a></li>
         <li><a href="https://portal.srxp.com/#/login"><i class="fa-solid fa-receipt"></i> SRXP Declaratie</a></li>
     </ul>
 
