--- a/buistabel.html
+++ b/buistabel.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Buis-tabellen</title>
     <style>
         body {
@@ -26,8 +26,6 @@
         }
         canvas {
             border: 1px solid #000;
-            max-width: 100%;
-            height: auto;
         }
         select {
             margin-bottom: 10px;
@@ -75,7 +73,7 @@
         function drawLines(x, y) {
             // Wis het canvas en teken de afbeelding opnieuw
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.drawImage(currentImage, 0, 0, canvas.width / (window.devicePixelRatio || 1), canvas.height / (window.devicePixelRatio || 1));
+            ctx.drawImage(currentImage, 0, 0);
 
             // Teken het punt
             ctx.beginPath();
@@ -99,21 +97,16 @@
             if (selectedValue !== "none") {
                 currentImage.src = selectedValue;
                 currentImage.onload = function() {
-                    // Pas de canvasgrootte aan op basis van de schermbreedte
-                    const maxWidth = window.innerWidth * 0.9; // 90% van de schermbreedte
-                    const scale = maxWidth / currentImage.width;
+                    // Toon de afbeelding op ware grootte
+                    canvas.width = currentImage.width;
+                    canvas.height = currentImage.height;
 
-                    // Pas canvasgrootte aan op basis van apparaat pixel ratio
-                    const devicePixelRatio = window.devicePixelRatio || 1;
-                    canvas.width = currentImage.width * devicePixelRatio;
-                    canvas.height = currentImage.height * devicePixelRatio;
-                    
-                    // Schaal voor weergave
-                    canvas.style.width = (currentImage.width * scale) + 'px';
-                    canvas.style.height = (currentImage.height * scale) + 'px';
+                    // Pas de schaal van de HTML-pagina aan om de afbeelding passend weer te geven
+                    const scale = Math.min(window.innerWidth / currentImage.width, window.innerHeight / currentImage.height);
+                    document.body.style.zoom = scale;
 
-                    ctx.scale(devicePixelRatio, devicePixelRatio);
-                    ctx.drawImage(currentImage, 0, 0, canvas.width / devicePixelRatio, canvas.height / devicePixelRatio);
+                    // Teken de afbeelding
+                    ctx.drawImage(currentImage, 0, 0);
                 }
             }
         });
