--- a/buistabel.html
+++ b/buistabel.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <!-- Aangepaste viewport meta-tag om inzoomen mogelijk te maken -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0, user-scalable=yes">
     <title>Buis-tabellen</title>
     <style>
         body {
@@ -101,10 +102,6 @@
                     // Toon de afbeelding op ware grootte
                     canvas.width = currentImage.width;
                     canvas.height = currentImage.height;
-
-                    // Pas de schaal van de HTML-pagina aan om de afbeelding passend weer te geven
-                    scale = Math.min(window.innerWidth / currentImage.width, window.innerHeight / currentImage.height);
-                    document.body.style.zoom = scale;
 
                     // Teken de afbeelding
                     ctx.drawImage(currentImage, 0, 0);
