--- a/buistabel.html
+++ b/buistabel.html
@@ -42,7 +42,7 @@
     <div id="canvasContainer">
         <h1 style="color: #F5DF4D;">Buis-tabellen</h1>
         <select id="imageSelect">
-            <option value="none">Selecteer een afbeelding</option>
+            <option value="none">Kies een buistabel</option>
             <option value="smart300.png">yxlon smart 300</option>
             <option value="ceramrondstraler.png">Ceram rondstraler</option>
             <option value="d4balteau107.png">Buis 107 D4 tabel</option>
