--- a/buistabel.html
+++ b/buistabel.html
@@ -43,12 +43,14 @@
         <h1 style="color: #F5DF4D;">Buis-tabellen</h1>
         <select id="imageSelect">
             <option value="none">Kies een buistabel</option>
-            <option value="smart300.png">yxlon smart 300</option>
             <option value="ceramrondstraler.png">Ceram rondstraler</option>
+            <option value="balteaurondstraleroud.png">Balteau oude rondstraler</option>
+            <option value="smart300.png">yxlon smart 300</option>
             <option value="d4balteau107.png">Buis 107 D4 tabel</option>
             <option value="d7balteau107.png">Buis 107 D7 tabel</option>
             <option value="d4balteau119.png">Buis 119 D4 tabel</option>
             <option value="d7balteau119.png">Buis 119 D7 tabel</option>
+            <option value="balteauspotgfd306.png">Balteau oude directional</option>
         </select>
         <div id="canvasWrapper" style="width: 100%; overflow: auto;">
             <canvas id="imageCanvas"></canvas>
