--- a/verval2.html
+++ b/verval2.html
@@ -13,7 +13,17 @@
             padding: 50px;
             margin: 0;
         }
+                /* Stijl voor de tabel */
+         table {
+            background-color: #293133; /* Grijze achtergrondkleur */
+            border-collapse: collapse;
+        }
 
+         table th, table td {
+            padding: 8px;
+            border: 1px solid black;
+        }
+            
     </style>
     <script>
         // Functie om de datum te converteren naar DD-MM-YYYY formaat
