--- a/bundelbreedte.html
+++ b/bundelbreedte.html
@@ -40,6 +40,7 @@
             margin-top: 20px;
             padding: 10px;
             color: black;
+            text-shadow: none;
             background-color: #f0f0f0;
             border: 1px solid #ccc;
         }
