--- a/Draadjesv2.html
+++ b/Draadjesv2.html
@@ -97,7 +97,7 @@
     </form>
 
     <h2>Resultaat</h2>
-    <p id="result" style="color: #F5DF4D;"></p>
+    <h2 id="result" style="color: #F5DF4D;"></h2>
     
     <img id="asmeImage" src="Lascategorie.png" alt="ASME Lastype" style="display:none;">
 
