--- a/focusverandering.html
+++ b/focusverandering.html
@@ -102,7 +102,7 @@
                 }
             } else {
                 document.getElementById("resultaat").innerHTML =
-                    `De berekende tijd na focusverandering is: ${secondenNaarTijd(nieuweTijd)}`;
+                    `De tijd op ${nieuweFocus} is: ${secondenNaarTijd(nieuweTijd)}`;
             }
 
             // Scroll to the result
