--- a/filmsoortverandering.html
+++ b/filmsoortverandering.html
@@ -74,11 +74,17 @@
             const seconden = parseInt(document.getElementById("seconden").value);
             const ffdVerandert = document.getElementById("ffdVerandert").checked;
             const oudeFocus = parseFloat(document.getElementById("oudeFocus").value);
-            const nieuweFocus = parseFloat(document.getElementById("nieuweFocus").value);
+            let nieuweFocus = parseFloat(document.getElementById("nieuweFocus").value);
+
+            // Controleer of de nieuweFocus leeg is, en verander naar "onveranderde" als dat het geval is
+            if (ffdVerandert && isNaN(nieuweFocus)) {
+                nieuweFocus = "onveranderde";
+            }
+
             const keuze = document.querySelector('input[name="keuze"]:checked').value;
 
             // Controleer of de tijd en focuswaarden geldig zijn
-            if (isNaN(minuten) || isNaN(seconden) || (ffdVerandert && (isNaN(oudeFocus) || isNaN(nieuweFocus)))) {
+            if (isNaN(minuten) || isNaN(seconden) || (ffdVerandert && (isNaN(oudeFocus) || nieuweFocus === "onveranderde"))) {
                 document.getElementById("resultaat").innerHTML = "Voer geldige waarden in.";
                 return;
             }
@@ -86,8 +92,8 @@
             // Zet tijd om naar totale seconden
             let tijdInSeconden = tijdNaarSeconden(minuten, seconden);
 
-            // Als de Film Focus Afstand verandert, pas focusverandering toe
-            if (ffdVerandert) {
+            // Als de Film Focus Afstand verandert, pas focusverandering toe (behalve als nieuweFocus "onveranderde" is)
+            if (ffdVerandert && nieuweFocus !== "onveranderde") {
                 tijdInSeconden = berekenFocusverandering(tijdInSeconden, nieuweFocus, oudeFocus);
             }
 
@@ -95,20 +101,28 @@
             if (keuze === "D4") {
                 resultaat = berekenD5D7VanD4(tijdInSeconden);
                 document.getElementById("resultaat").innerHTML =
-                    `De tijd op ${nieuweFocus} FFD is:<br>D5 = ${secondenNaarTijd(resultaat.d5)}<br>D7 = ${secondenNaarTijd(resultaat.d7)}`;
+                    `De tijd op ${nieuweFocus === "onveranderde" ? "dezelfde" : nieuweFocus} FFD is:<br>D5 = ${secondenNaarTijd(resultaat.d5)}<br>D7 = ${secondenNaarTijd(resultaat.d7)}`;
             } else if (keuze === "D5") {
                 resultaat = berekenD4D7VanD5(tijdInSeconden);
                 document.getElementById("resultaat").innerHTML =
-                    `De tijd op ${nieuweFocus} FFD is:<br>D4 = ${secondenNaarTijd(resultaat.d4)}<br>D7 = ${secondenNaarTijd(resultaat.d7)}`;
+                    `De tijd op ${nieuweFocus === "onveranderde" ? "dezelfde" : nieuweFocus} FFD is:<br>D4 = ${secondenNaarTijd(resultaat.d4)}<br>D7 = ${secondenNaarTijd(resultaat.d7)}`;
             } else if (keuze === "D7") {
                 resultaat = berekenD4D5VanD7(tijdInSeconden);
                 document.getElementById("resultaat").innerHTML =
-                    `De tijd op ${nieuweFocus} FFD is:<br>D4 = ${secondenNaarTijd(resultaat.d4)}<br>D5 = ${secondenNaarTijd(resultaat.d5)}`;
+                    `De tijd op ${nieuweFocus === "onveranderde" ? "dezelfde" : nieuweFocus} FFD is:<br>D4 = ${secondenNaarTijd(resultaat.d4)}<br>D5 = ${secondenNaarTijd(resultaat.d5)}`;
             }
 
-            // Scroll to the result after calculation
+            // Scroll naar het resultaat na de berekening
             document.getElementById("resultaat").scrollIntoView({ behavior: 'smooth' });
         }
+
+        // Controleer of de waarde van nieuweFocus leeg is en verander deze naar "onveranderde"
+        document.getElementById("nieuweFocus").addEventListener('input', function() {
+            const nieuweFocus = document.getElementById("nieuweFocus").value;
+            if (nieuweFocus === "") {
+                document.getElementById("nieuweFocus").setAttribute("placeholder", "onveranderde");
+            }
+        });
     </script>
 </head>
 <body>
