--- a/MinFFD.html
+++ b/MinFFD.html
@@ -157,7 +157,7 @@
                 return;
             }
 
-            output.innerHTML += `De berekende Film Focus Afstand (FFD) is: ${ffd.toFixed(2)} mm<br>`;
+            output.innerHTML += `De minimale Film Focus Afstand (FFD) is: ${ffd.toFixed(2)} mm<br>`;
         }
 
         // Functie om automatisch naar het antwoord te scrollen
