--- a/LW_Verdeler.html
+++ b/LW_Verdeler.html
@@ -70,14 +70,14 @@
         <button onclick="verdeelLengte()">Verdeel Lengte</button>
         <p id="resultaat" style="color: #F5DF4D;"></p>
 
-        <h2>Optioneel:</h2>        
+        <h3>Optioneel:</h3>        
 
 
-        <p>Voer de maximale lengte per deel in (in mm, standaard 400 mm):</p>
-        <input type="number" id="maxLengte" value="400" required>
+        <p style="font-size: smaller;">Voer de maximale lengte per deel in (in mm, standaard 400 mm):</p>
+        <input style="font-size: smaller;" type="number" id="maxLengte" value="400" required>
         
-        <p>Voer de lengte van de uiteindes in (in mm, standaard 200 mm, maximaal 230 mm):</p>
-        <input type="number" id="uiteindeLengte" value="200" max="230" required>
+        <p style="font-size: smaller;">Voer de lengte van de uiteindes in (in mm, standaard 200 mm, maximaal 230 mm):</p>
+        <input style="font-size: smaller;" type="number" id="uiteindeLengte" value="200" max="230" required>
         
     </div>
 
