--- a/LW_Verdeler.html
+++ b/LW_Verdeler.html
@@ -74,10 +74,10 @@
 
 
         <p style="font-size: smaller;">Voer de maximale lengte per deel in (in mm, standaard 400 mm):</p>
-        <input style="font-size: smaller;" type="number" id="maxLengte" value="400" required>
+        <input style="font-size: 12px;" type="number" id="maxLengte" value="400" required>
         
         <p style="font-size: smaller;">Voer de lengte van de uiteindes in (in mm, standaard 200 mm, maximaal 230 mm):</p>
-        <input style="font-size: smaller;" type="number" id="uiteindeLengte" value="200" max="230" required>
+        <input style="font-size: 12px;" type="number" id="uiteindeLengte" value="200" max="230" required>
         
     </div>
 
