--- a/LW_Verdeler.html
+++ b/LW_Verdeler.html
@@ -77,7 +77,7 @@
         <input style="font-size: 12px; width: 50%; padding: 7px;" type="number" id="maxLengte" value="400" required>
         
         <p style="font-size: smaller;">Voer de lengte van de uiteindes in (in mm, standaard 200 mm, maximaal 230 mm):</p>
-        <input style="font-size: 12px; width: 50% padding: 7px;" type="number" id="uiteindeLengte" value="200" max="230" required>
+        <input style="font-size: 12px; width: 50%; padding: 7px;" type="number" id="uiteindeLengte" value="200" max="230" required>
         
     </div>
 
