--- a/buistabel.html
+++ b/buistabel.html
@@ -175,7 +175,7 @@
                 const minutes = Math.floor(totalMinutes);
                 const seconds = Math.round((totalMinutes - minutes) * 60);
 
-                document.getElementById('result').textContent = `Bij gebruik van ${ma} mA is de tijd:<br> ${minutes} minuten en ${seconds} seconden.`;
+                document.getElementById('result').textContent = `Bij gebruik van ${ma} mA is de tijd: ${minutes} minuten en ${seconds} seconden.`;
             } else {
                 document.getElementById('result').textContent = "Vul geldige waarden in voor mA*min en mA.";
             }
