--- a/timer.html
+++ b/timer.html
@@ -45,6 +45,7 @@
         }
         #recalculate-section {
             margin: 20px 0;
+            margin-bottom: 50px;
         }
         @media (max-width: 600px) {
             .timer {
